# tmp-snowpark-debug

./: .gitignore  README.md  deploy_stored_procedure.py  environment.yml  load_data.py  pyproject.toml  requirements.txt
ml_project/: config.py  snowparkprophet.py  train.py  utils.py
